--- a/a-club-site-making-main/a-club-site-making-main/web-program__page-start/styles.css
+++ b/a-club-site-making-main/a-club-site-making-main/web-program__page-start/styles.css
@@ -9,6 +9,7 @@
 @import "css/perform_card.css";
 @import "css/cre_card.css";
 @import "css/busi_card.css";
+@import "css./aca_card.css";
 
 body {
     margin : 0px;
