--- a/a-club-site-making-main/a-club-site-making-main/web-program__page-start/styles.css
+++ b/a-club-site-making-main/a-club-site-making-main/web-program__page-start/styles.css
@@ -9,7 +9,8 @@
 @import "css/perform_card.css";
 @import "css/cre_card.css";
 @import "css/busi_card.css";
-@import "css./aca_card.css";
+@import "css/main-home.css";
+@import "css/part_seohyeon.css";
 
 body {
     margin : 0px;
