--- a/a-club-site-making-main/a-club-site-making-main/web-program__page-start/styles.css
+++ b/a-club-site-making-main/a-club-site-making-main/web-program__page-start/styles.css
@@ -11,6 +11,7 @@
 @import "css/busi_card.css";
 @import "css/main-home.css";
 @import "css/part_seohyeon.css";
+@import "css/aca_card.css";
 
 body {
     margin : 0px;
